# getoptFortran

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cgetopt.F90  cgetopt_interface.f90  getoptF.f90  test_cgetopt.f90  test_getoptF.f90  test_getoptF_2.f90
